@@ -3,6 +3,7 @@
   * added ADD-NAMESPACE method, available to all elements (svg.lisp)
   * added SCRIPT-LINK function (svg.lisp)
   * added MAKE-FOREIGN-OBJECT (svg.lisp)
+  * bug in TRANSFORM with multiple transformations fixed
 
 0.01 - June 14 2008
   * initial release
